set production url

--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "webpack-dev-server": "2.11.2"
   },
   "buildpacks": [
-    { "url": "heroku/nodejs" },
-    { "url": "heroku/ruby" }
+    {
+      "url": "heroku/nodejs"
+    },
+    {
+      "url": "heroku/ruby"
+    }
   ]
 }
