--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "rxjs": "^5.5.7",
     "ts-loader": "3.5.0",
     "typescript": "^2.7.2",
+    "yarn-install": "^1.0.0",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
