--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -8,14 +8,12 @@ default: &default
 
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
-  resolved_paths: ['app/assets/images/cards']
+  resolved_paths: []
 
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
 
   extensions:
-    - .tsx
-    - .ts
     - .js
     - .sass
     - .scss
